objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Grade__c</fullName>
        <inlineHelpText>Displays the student&apos;s current grade level.</inlineHelpText>
        <label>Grade</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                    <color>#78C953</color>
                    <label>PK</label>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                    <color>#A845DC</color>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <color>#F3D904</color>
                    <label>2</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <color>#A53711</color>
                    <label>3</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <color>#66E9BD</color>
                    <label>4</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <color>#0B24BE</color>
                    <label>5</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <color>#419249</color>
                    <label>6</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <color>#B6E32E</color>
                    <label>7</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <color>#641CCF</color>
                    <label>8</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <color>#F96FB7</color>
                    <label>9</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <color>#2F5D85</color>
                    <label>10</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <color>#AFCADF</color>
                    <label>11</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <color>#8F6429</color>
                    <label>12</label>
                </value>
                <value>
                    <fullName>UN Ungraded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grades_Overridden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student has grades that have been manually overriden.</inlineHelpText>
        <label>Grades Overridden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Graduation_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Trigger updates this field , If the grade span in the school is the last grade and promotion flag is checked</description>
        <inlineHelpText>Indicates whether or not the student graduated. The EOY Wizard updates this field when deactivating the Student record for a student who is in the last grade of the school&apos;s grade span and is being promoted. You can manually update this field.</inlineHelpText>
        <label>Graduated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Grede_Multiselect__c</fullName>
        <label>Grade</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PS</fullName>
                </value>
                <value>
                    <fullName>PK</fullName>
                </value>
                <value>
                    <fullName>K</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>UN Ungraded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Guest_Student__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Guest Student</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HS_College_Career_Support__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Teams will partner with school-based guidance counselors/college advisors to implement college &amp; career activities for 9th and 10th grade students.  The purpose of this pilot is to build a model for how to partner with college advisors and guidance departments to get students to high school graduation and beyond.</description>
        <label>HS College &amp; Career Support</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hispanic__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Ethnicity*Retired*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hobbies__c</fullName>
        <label>Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Holding_Local_ID__c</fullName>
        <formula>Holding_Source__r.Local_Student_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Holding Local ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Holding_Source__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not modify this field; it is used for internal purposes only.</inlineHelpText>
        <label>Holding Source</label>
        <referenceTo>HoldingObj__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Holistic_Student_Assessment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Pilot the Holistic Student Assessment (HSA) for focus list students across all indicator areas to round out City Year&apos;s youth development approach, complementing the use of the DESSA and Clover.  

This pilot will provide sites with a more holistic understanding of focus list students, with the goal of using data on student voice to inform learning environments and student engagement strategies.</description>
        <label>Holistic Student Assessment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Language__c</fullName>
        <inlineHelpText>Select the language(s) spoken in the student&apos;s home. If you select Spanish, report
cards and progress reports print in Spanish. For any non-English language, the
text in the Alt Lang Comments field displays for Section Comments and Overall Comments.</inlineHelpText>
        <label>Home Language</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Amharic</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>Vietnamese</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Mandarin</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Homeroom__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the student&apos;s homeroom. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Homeroom</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only sections marked as Homerooms can be selected</errorMessage>
            <filterItems>
                <field>Section__c.Homeroom__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Section__c</referenceTo>
        <relationshipLabel>Students (Homeroom)</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IEP_Program__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not a student has an Individualized Education Program (IEP). When mass printing report cards, you can use this field to narrow down your search results.</inlineHelpText>
        <label>IEP Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IEP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not a student has an Individualized Education Program (IEP).</inlineHelpText>
        <label>IEP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Consent_Accepted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IES Consent Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Consent_Form_File_Name__c</fullName>
        <label>IES Consent Form File Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IES_Consent_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IES Consent Rejected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Incentive_Given__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IES Incentive Given</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Study_Consent_Form_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IES Study Consent Form Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Study_Consent_Form_Returned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IES Study Consent Form Returned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IES_Study_Participant__c</fullName>
        <label>IES Study Participant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Opt Out</fullName>
                </value>
                <value>
                    <fullName>Treatment Group</fullName>
                </value>
                <value>
                    <fullName>Control Group</fullName>
                </value>
                <value>
                    <fullName>Joined Treatment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>If_Free_Type__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>If Free, Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Temporary Free</fullName>
                </value>
                <value>
                    <fullName>Free Direct Certification</fullName>
                </value>
                <value>
                    <fullName>TANF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Immigrant_Program_Participant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not a student is an Immigrant Program Participant.  If you update this field, SchoolForce updates the corresponding field on the Contact record.</inlineHelpText>
        <label>Immigrant Program Participant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Immigrant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student is an immigrant. When mass printing report cards, you can use this field to narrow down your search results.</inlineHelpText>
        <label>Immigrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Individual_Reference_Id__c</fullName>
        <formula>Individual__r.Reference_Id__c</formula>
        <label>Individual Reference Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Displays the name for the Contact record associated to this Student record. You can click the link to view the student&apos;s Contact record.</inlineHelpText>
        <label>Individual Record</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Records</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Intent_to_Return_Following_Year__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Indicates whether or not the student intends to return to their current school for the following year. This field is updated by the EOY Wizard and you can also manually update it.</inlineHelpText>
        <label>Intent to Return Following Year?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Local_ID__c</fullName>
        <label>Internal Local ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Is Active?*Retired*</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Grade_In_Setup__c</fullName>
        <formula>IF(TEXT(Grade__c)==&apos;PS&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;PS&quot;),true,
IF(TEXT(Grade__c)==&apos;PK&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;PK&quot;),true,
IF(TEXT(Grade__c)==&apos;K&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;K&quot;),true,
IF(TEXT(Grade__c)==&apos;PK-3&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;PK-3&quot;),true,
IF(TEXT(Grade__c)==&apos;PK-4&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;PK-4&quot;),true,
IF(TEXT(Grade__c)==&apos;PK Pre-K&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;PK Pre-K&quot;),true,
IF(TEXT(Grade__c)==&apos;Kindergarten/Preschool&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;Kindergarten/Preschool&quot;),true,
IF(TEXT(Grade__c)==&apos;KG Kindergarten&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;KG Kindergarten&quot;),true,
IF(TEXT(Grade__c)==&apos;PG Postgraduate/Adult&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;PG Postgraduate/Adult&quot;),true,
IF(TEXT(Grade__c)==&apos;Kindergarten&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;Kindergarten&quot;),true,
IF(TEXT(Grade__c)==&apos;1&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;1&quot;),true,
IF(TEXT(Grade__c)==&apos;2&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;2&quot;),true,
IF(TEXT(Grade__c)==&apos;3&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;3&quot;),true,
IF(TEXT(Grade__c)==&apos;4&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;4&quot;),true,
IF(TEXT(Grade__c)==&apos;5&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;5&quot;),true,
IF(TEXT(Grade__c)==&apos;6&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;6&quot;),true,
IF(TEXT(Grade__c)==&apos;7&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;7&quot;),true,
IF(TEXT(Grade__c)==&apos;8&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;8&quot;),true,
IF(TEXT(Grade__c)==&apos;9&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;9&quot;),true,
IF(TEXT(Grade__c)==&apos;10&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;10&quot;),true,
IF(TEXT(Grade__c)==&apos;11&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;11&quot;),true,
IF(TEXT(Grade__c)==&apos;12&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;12&quot;),true,
IF(TEXT(Grade__c)==&apos;UN Ungraded&apos; &amp;&amp; INCLUDES( Setup__r.Grade_Span__c, &quot;UN Ungraded&quot;),true,
false)))))))))))))))))))))))</formula>
        <label>Is Grade In Setup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Legacy_Id__c</fullName>
        <description>USI ID</description>
        <inlineHelpText>Displays the Unique Student Identifier (USI) for the student. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>USI ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lep_Flag__c</fullName>
        <inlineHelpText>Indicates whether or not the student has Limited English Proficiency (LEP), which means the student is unable to communicate effectively in English and may have difficulty speaking or reading English.</inlineHelpText>
        <label>LEP Flag</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Plate__c</fullName>
        <inlineHelpText>Displays the student&apos;s vehicle license plate number. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>License Plate #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Local_Student_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>This field can be populated with either the student???s school/district assigned ID or a local ID.</inlineHelpText>
        <label>Local Student ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <formula>TEXT( School__r.Site__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locker_Number__c</fullName>
        <inlineHelpText>Displays the student&apos;s locker number. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Locker Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lot_Access__c</fullName>
        <inlineHelpText>Displays the lot in which the student is allowed to park. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Lot Access</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch_Status__c</fullName>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes. SchoolForce recommends that you use the Meals Category field instead.</inlineHelpText>
        <label>Lunch Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Math_FL_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Math FL Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Math__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Math</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Meals_Category__c</fullName>
        <inlineHelpText>Displays the type of meal program assigned to this student. The Meals module uses this field. You can also use it for reporting purposes.</inlineHelpText>
        <label>Meals Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Full-Priced</fullName>
                </value>
                <value>
                    <fullName>Reduced</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Meals_Sub_Category__c</fullName>
        <inlineHelpText>If Free is selected in the Meals Category field, this field displays the type of program that applies. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Meals Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Meals_Category__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>TEMP FREE</fullName>
                </value>
                <value>
                    <fullName>FDC FREE</fullName>
                </value>
                <value>
                    <fullName>TANF FREE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Migrant__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Displays whether or not the student is a migrant. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Migrant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <inlineHelpText>Displays the student&apos;s mobile phone number.</inlineHelpText>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Native_Hawaiian_Other_Pacific_Islander__c</fullName>
        <formula>IF( INCLUDES(Race_Multi__c, &apos;Native Hawaiian/Other Pacific Islander&apos;), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Native Hawaiian/Other Pacific Islander</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_School__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If the student intends to attend a school within your SchoolForce org next year, this field displays the name of next year&apos;s school. This field is updated by the EOY Wizard and you can also manually update it.</inlineHelpText>
        <label>Next School</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Students (Next School Year)</relationshipLabel>
        <relationshipName>Students_Next_Year</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <inlineHelpText>Displays a nickname for the student if he/she uses a name other than the one listed in the Student First Name field.</inlineHelpText>
        <label>Nickname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Present_Daily_Attendance__c</fullName>
        <description>This field is the total number of daily attendance records that are not &quot;Present&quot; for a student.</description>
        <inlineHelpText>Displays the student&apos;s total number of Attendance records where the Daily check box is selected and the value in the Status field is not &quot;Present&quot;.</inlineHelpText>
        <label>Non-Present Daily Attendance</label>
        <summaryFilterItems>
            <field>Attendance__c.Daily__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Attendance__c.Status_for_Rollup__c</field>
            <operation>contains</operation>
            <value>Absence, Suspension, Out</value>
        </summaryFilterItems>
        <summaryForeignKey>Attendance__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Present_Daily_Attendance_v2__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce.</inlineHelpText>
        <label>Non-Present Daily Attendance*Retired*</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Indicator_Areas__c</fullName>
        <inlineHelpText>How many active Indicator Areas is this student associated to?</inlineHelpText>
        <label>Number of Indicator Areas</label>
        <summaryFilterItems>
            <field>Indicator_Area_Student__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Indicator_Area_Student__c.Student__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>OSSE_Code_Text__c</fullName>
        <inlineHelpText>Displays the text for the Office of the State Superintendent of Education (OSSE) code. Only relevant to schools in Washington, DC.</inlineHelpText>
        <label>OSSE Code Text</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSSE_Code__c</fullName>
        <inlineHelpText>Displays the student&apos;s Office of the State Superintendent of Education (OSSE) code. Only relevant to schools in Washington, DC.</inlineHelpText>
        <label>OSSE Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>T-1111</fullName>
                </value>
                <value>
                    <fullName>T-2222</fullName>
                </value>
                <value>
                    <fullName>T-3333</fullName>
                </value>
                <value>
                    <fullName>T-4444</fullName>
                </value>
                <value>
                    <fullName>W-1111</fullName>
                </value>
                <value>
                    <fullName>W-2222</fullName>
                </value>
                <value>
                    <fullName>W-3333</fullName>
                </value>
                <value>
                    <fullName>W-4444</fullName>
                </value>
                <value>
                    <fullName>D-1111</fullName>
                </value>
                <value>
                    <fullName>D-2222</fullName>
                </value>
                <value>
                    <fullName>D-3333</fullName>
                </value>
                <value>
                    <fullName>D-4444</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Official_Exit_Type__c</fullName>
        <inlineHelpText>Do not use this field; it is no longer used by SchoolForce. Use the Exit Type field instead.</inlineHelpText>
        <label>Official Exit Type*Retired*</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TO (Transfer Out of State)</fullName>
                </value>
                <value>
                    <fullName>TS (Transfer In State - Other LEA)</fullName>
                </value>
                <value>
                    <fullName>TS (Transfer In State - Non-Public)</fullName>
                </value>
                <value>
                    <fullName>NI (No Show)</fullName>
                </value>
                <value>
                    <fullName>EX (Expulsion)</fullName>
                </value>
                <value>
                    <fullName>NI (No Information)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Graduation_Year__c</fullName>
        <inlineHelpText>Displays the year the student originally intended to graduate. You can use this field for reporting purposes.</inlineHelpText>
        <label>Original Graduation Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1990</fullName>
                </value>
                <value>
                    <fullName>1991</fullName>
                </value>
                <value>
                    <fullName>1992</fullName>
                </value>
                <value>
                    <fullName>1993</fullName>
                </value>
                <value>
                    <fullName>1994</fullName>
                </value>
                <value>
                    <fullName>1995</fullName>
                </value>
                <value>
                    <fullName>1996</fullName>
                </value>
                <value>
                    <fullName>1997</fullName>
                </value>
                <value>
                    <fullName>1998</fullName>
                </value>
                <value>
                    <fullName>1999</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2001</fullName>
                </value>
                <value>
                    <fullName>2002</fullName>
                </value>
                <value>
                    <fullName>2003</fullName>
                </value>
                <value>
                    <fullName>2004</fullName>
                </value>
                <value>
                    <fullName>2005</fullName>
                </value>
                <value>
                    <fullName>2006</fullName>
                </value>
                <value>
                    <fullName>2007</fullName>
                </value>
                <value>
                    <fullName>2008</fullName>
                </value>
                <value>
                    <fullName>2009</fullName>
                </value>
                <value>
                    <fullName>2010</fullName>
                </value>
                <value>
                    <fullName>2011</fullName>
                </value>
                <value>
                    <fullName>2012</fullName>
                </value>
                <value>
                    <fullName>2013</fullName>
                </value>
                <value>
                    <fullName>2014</fullName>
                </value>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Original_Member_Of_Cohort__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student is an original member of the cohort to which he/she is assigned. You can use this field for reporting purposes.</inlineHelpText>
        <label>Original Member Of Cohort</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Original_School__c</fullName>
        <label>Original School</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Out_of_ELL__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether or not the student has been out of English language learner (ELL) status for less than 2 years. This field is not used by SchoolForce, but you can use it for reporting purposes.</inlineHelpText>
        <label>Out of ELL less than 2 years?</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>